# cyberfabric-core

./: Cargo.toml  Makefile  release-plz.toml
.cf-studio/: version.toml  whatsnew.toml
.cf-studio/config/: artifacts.toml
.cypilot/config/: artifacts.toml
config/: quickstart.yaml
gears/model-registry/model-registry-sdk/: Cargo.toml
gears/model-registry/model-registry-sdk/src/models/: default_parameters.rs  request.rs
libs/modkit-auth/src/providers/: jwks.rs
modules/chat-engine/chat-engine-sdk/src/: plugin.rs
modules/llm-gateway/docs/: DESIGN.md
modules/llm-gateway/docs/ADR/: 0005-cpt-cf-llm-gateway-adr-open-responses-protocol.md
modules/llm-gateway/llm-gateway-sdk/schemas/content/: input_file.v1.schema.json  input_image.v1.schema.json  (+3 more)
modules/model-registry/docs/: DESIGN.md  PRD.md  UPSTREAM_REQS.md
modules/model-registry/docs/ADR/: 0002-cpt-cf-model-registry-adr-approval-delegation.md  0005-cpt-cf-model-registry-adr-gts-typed-provider-settings.md
modules/model-registry/model-registry-sdk/: Cargo.toml
modules/model-registry/model-registry-sdk/src/: api.rs  errors.rs  lib.rs  models.rs
modules/model-registry/model-registry-sdk/src/models/: common.rs  default_parameters.rs  entity.rs  info.rs  mod.rs  provider_settings.rs  request.rs
modules/model-registry/model-registry-sdk/src/models/providers/: anthropic.rs  mod.rs  openai.rs
modules/system/quota-enforcement/docs/: PRD.md
modules/system/usage-collector/docs/: DECOMPOSITION.md  DESIGN.md  PRD.md  domain-model.md  plugin-spi.md  sdk-trait.md  usage-collector-v1.yaml
tools/scripts/: ci.py
(+40 files in other folders)
