[package]
name = "cf-model-registry-sdk"
description = "SDK for the Model Registry: API traits, models, and error definitions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "model_registry_sdk"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["odata"]
odata = ["dep:modkit-odata"]

[dependencies]
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
modkit-security = { workspace = true }
modkit-odata = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
